# mat2h5

./: .gitignore  CNAME  LICENSE  README.md  SETUP_REMOTE.md  conversion_log.txt  fairy-frames.js  generate_assets.py  index.html  install.py  magat_bridge.py  magatfairy.bat  magatfairy.command  magatfairy.py  mat2h5.py  mat2h5.sh  pyproject.toml  run_conversion.ps1  verify_png.py  verify_stimuli.py
docs/: ARCHITECTURE.md  FIELD_MAPPING.md  MAGAT_LICENSE.md  VALIDATION.md  field-mapping.md
docs/assets/: maggot-frame.js
docs/handoffs/: fairybro-h5-export-fixes.md
h5_export/: batch_export_esets.py  convert_matlab_to_h5.py
matlab/core/@CacheManager/: getCached.m  showCached.m
matlab/core/@DataManager/: getAllFIDData.m  getCompositeFieldFrame.m  getContoursVariable.m  getFIDImage.m  loadExperimentMinimal.m
matlab/core/@ExportManager/: ExportManager.m  exportIntegrationMatrix.m
matlab/core/@Renderer/: Renderer.m  renderContour.m  renderDots.m  renderTrail.m
scripts/conversion/: convert_matlab_to_h5.py
src/cli/: magatfairy.py
src/install/: install.py
src/launch_scripts/: magatfairy.bat  magatfairy.command  magatfairy.sh
src/magatfairy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/magatfairy_app/: main.py
src/mat2h5/: __init__.py  bridge.py  progress.py
src/matlab/core/: example_usage.m  (+1 more)
src/tools/: update_fairy_animation.py
validation/: README.md  compare_outputs.py
validation/matlab/: load_experiment_and_compute.m  run_validation_suite.m
validation/python/: load_experiment_and_compute.py  validate_h5_schema.py
(+60 files in other folders)
