[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magatfairy"
version = "0.2.1"
description = "MAGAT (MATLAB Track Analysis) to H5 conversion CLI and tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "h5py",
    "scipy"
]

[project.scripts]
magatfairy = "cli.magatfairy:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



